--- a/public/styles/room.css
+++ b/public/styles/room.css
@@ -33,6 +33,10 @@
     padding: 1.3rem 3.2rem;
 }
 
+#room header .buttons .button:nth-child(2) {
+    color: var(--white);
+}
+
 #room header .buttons .button:nth-child(2) img{
     width: 2rem;
     height: 2rem;
