--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -20,7 +20,7 @@ header{
 
 #bg{
     grid-area: left;
-    background: url("/assets/home-bg.svg") no-repeat top/contain;
+    background: url("/images/home-bg.svg") no-repeat top/contain;
     background-position: -10rem;
 }
 
@@ -47,6 +47,7 @@ main h2{
 input{
     border: 0.2rem solid var(--grey-blue);
     padding: 0 1.6rem;
+    outline: none;
 }
 
 .separator {
