--- a/public/styles/modal.css
+++ b/public/styles/modal.css
@@ -1,3 +1,8 @@
+.modal-wrapper.active {
+    visibility: visible;
+    opacity: 1;
+}
+
 .modal-wrapper{
     display: flex;
     position: fixed;
@@ -9,6 +14,9 @@
     left: 0;
 
     background: rgba(4, 9, 17, 0.8);
+
+    visibility: hidden;
+    opacity: 0;
 }
 
 .modal-wrapper .modal{
