--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,6 +1,5 @@
 <!Doctype html>
 <html>
-
   <head>
     <title>Criar Sala - Rocker.Q</title>
     <meta charset="UTF-8">
@@ -8,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- Styles-->
-    <link rel="stylesheet" href="./styles/global.css">
-    <link rel="stylesheet" href="./styles/home.css">    
+    <link rel="stylesheet" href="/styles/global.css">
+    <link rel="stylesheet" href="/styles/home.css">    
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,27 +19,17 @@
   <body>
     <div id="home" class="content">
       <header>
-        <img src="./assets/logo.svg" alt="Rocket.Q Logo">
+        <%- include('parts/logo')%>
       </header>
 
       <div id="bg">
         <div class="ball top"></div>
-        <div class="ball bottom"></div>
+        <div class="ball bottom"></div>     
       </div>
 
       <main>
         <div class="container">
-          <section>
-            <h2>Crie sua própria sala</h2>
-            <form action="#">
-              <label class="sr-only" for="room-id">Insira uma senha</label>
-              <input type="text" id="room-id", placeholder="Insira uma senha">
-              <button>
-                <img src="/assets/users-white.svg" alt="Criar uma sala">
-                Criar uma sala
-              </button>
-            </form>
-          </section>
+          <%- include(`parts/${page}`) %>
         </div>
       </main>
     </div>
