--- a/src/views/parts/enter-room.ejs
+++ b/src/views/parts/enter-room.ejs
@@ -1,8 +1,8 @@
 <section>
   <h2>Entre como participante</h2>
-  <form action="#">
+  <form action="enter-room" method="POST">
     <label class="sr-only" for="room-id">Código da sala</label>
-    <input type="text" id="room-id", placeholder="Código da sala">
+    <input type="text" id="room-id" name="roomId" placeholder="Código da sala">
     <button>
       <img src="/images/login.svg" alt="Login">
       Entrar na sala
