--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -44,6 +44,15 @@ main h2{
     color: var (--black);
 }
 
+p{
+    font-family: 'Poppins', sans-serif;
+    font-size: clamp(14px, 1.8rem, 3vw);
+    margin-bottom: 1.4rem;
+    text-align: center;
+
+    color: var(--red);
+}
+
 input{
     border: 0.2rem solid var(--grey-blue);
     padding: 0 1.6rem;
